added filters for geo fences

--- a/server/pdfTemplates/lr.html
+++ b/server/pdfTemplates/lr.html
@@ -300,10 +300,10 @@
                         </tr>
                         <tr>
                             <td style="border-right:1px solid #333;padding:6px 0;">
-                                (data..)
+                                {{lrDetails.weightCharged.qtl}}
                             </td>
                             <td>
-                                (data..)
+                                {{lrDetails.weightCharged.kgs}}
                             </td>
                         </tr>
                         </tbody>
@@ -317,31 +317,31 @@
                             <td style="border-right:1px solid #333;padding:2px;">
                                 <b>Handling</b>
                             </td>
-                            <td>(data...)</td>
+                            <td>{{lrDetails.handling}}</td>
                         </tr>
                         <tr style="border-bottom:1px solid #333;">
                             <td style="border-right:1px solid #333;padding:2px;">
                                 <b> Statistical</b>
                             </td>
-                            <td>(data...)</td>
+                            <td>{{lrDetails.statistical}}</td>
                         </tr>
                         <tr style="border-bottom:1px solid #333;">
                             <td style="border-right:1px solid #333;padding:2px;">
                                 <B> R.C</B>
                             </td>
-                            <td>(data...)</td>
+                            <td>{{lrDetails.rc}}</td>
                         </tr>
                         <tr style="border-bottom:1px solid #333;">
                             <td style="border-right:1px solid #333;padding:2px;">
                                 <B>  Caratage</B>
                             </td>
-                            <td>(data...)</td>
+                            <td>{{lrDetails.caratage}}</td>
                         </tr>
                         <tr style="border-bottom:1px solid #333;">
                             <td style="border-right:1px solid #333;padding:2px;">
                                 <B> Others</B>
                             </td>
-                            <td>(data...)</td>
+                            <td>{{lrDetails.others}}</td>
                         </tr>
                         <tr style="border-bottom:1px solid #333;">
                             <td style="border-right:1px solid #333;padding:2px;">
@@ -353,25 +353,25 @@
                             <td style="border-right:1px solid #333;padding:2px;">
                                 <b> Surcharges</b>
                             </td>
-                            <td>(data...)</td>
+                            <td>{{lrDetails.surCharges}}</td>
                         </tr>
                         <tr style="border-bottom:1px solid #333;">
                             <td style="border-right:1px solid #333;padding:2px;">
                                 <b>IGST</b>
                             </td>
-                            <td>(data...)</td>
+                            <td>{{accDetails.igst}}</td>
                         </tr>
                         <tr style="border-bottom:1px solid #333;">
                             <td style="border-right:1px solid #333;padding:2px;">
                                 <b> CGST</b>
                             </td>
-                            <td>(data...)</td>
+                            <td>{{accDetails.cgst}}</td>
                         </tr>
                         <tr style="border-bottom:1px solid #333;">
                             <td style="border-right:1px solid #333;padding:2px;">
                                 <b> SGST</b>
                             </td>
-                            <td>(data...)</td>
+                            <td>{{accDetails.sgst}}</td>
                         </tr>
                         <tr>
                             <td style="border-right:1px solid #333;padding:2px;">
