--- a/server/emailTemplates/addTripDetails.html
+++ b/server/emailTemplates/addTripDetails.html
@@ -52,8 +52,8 @@
                 <td>$emailData.Amount.toFixed(2)</td>
             </tr>
             <tr>
-                <td>Share Link</td>
-                <td>$emailData.shareLink</td>
+                <td>Track Link</td>
+                <td>$emailData.trackLink</td>
             </tr>
 
         </table>
