--- a/server/emailTemplates/jobDetails.html
+++ b/server/emailTemplates/jobDetails.html
@@ -9,27 +9,23 @@
 <body>
 <div>
     <h4>Job Details </h4>
-    <table style="width: 600px;">
+    <table border="1">
         <tr>
-            <td> Job Date</td>
-            <td>$emailData.jobDate</td>
-        </tr>
-        <tr>
+            <td>Job Date</td>
             <td>Inventory</td>
-            <td>$emailData.inventory</td>
-        </tr>
-        <tr>
             <td>Vehicle</td>
-            <td>$emailData.vehicle</td>
-        </tr>
-        <tr>
             <td>Reminder Date</td>
-            <td>$emailData.reminderDate</td>
-        </tr>
-        <tr>
             <td>Milege</td>
-            <td>$emailData.milege</td>
         </tr>
+        #foreach($record in $emailData)
+        <tr>
+            <td>$record.jobDate</td>
+            <td>$record.inventory</td>
+            <td>$record.vehicle</td>
+            <td>$record.reminderDate</td>
+            <td>$record.milege</td>
+        </tr>
+        #end
     </table>
 </div>
 </body>
