--- a/server/emailTemplates/inventoriesDetails.html
+++ b/server/emailTemplates/inventoriesDetails.html
@@ -13,6 +13,7 @@
         <tr>
             <td>Inventory Id</td>
             <td>Inventory name</td>
+            <td>Vehicle</td>
             <td>Supplier</td>
             <td>Payment mode</td>
             <td>Amount</td>
@@ -22,6 +23,7 @@
         <tr>
             <td>$record.inventoryId</td>
             <td>$record.inventoryName</td>
+            <td>$record.vehicle</td>
             <td>$record.supplier</td>
             <td>$record.paymentMode</td>
             <td>$record.amount</td>
