lrPdfChanges And adding Tripsettlement

--- a/server/pdfTemplates/lr.html
+++ b/server/pdfTemplates/lr.html
@@ -338,7 +338,7 @@
                             <td style="border-right:1px solid #333;padding:2px;">
                                 <B> R.C</B>
                             </td>
-                            <td>{{lrDetails.rc}}</td>
+                            <td>(data..)</td>
                         </tr>
                         <tr style="border-bottom:1px solid #333;">
                             <td style="border-right:1px solid #333;padding:2px;">
