--- a/server/pdfTemplates/vrl/invoice.html
+++ b/server/pdfTemplates/vrl/invoice.html
@@ -97,13 +97,21 @@
                 who pays the bill under RCM<br>
                 All disputes are subject to Guntur Jurisdiction<br>
             </p>
+            <aside style="text-align: right; font-size: 16px;padding-right: 10px">for VANGALA LOGISTICS</aside>
             <b style="font-size:12px">Bank Details:</b><br>
             <p style="font-size:7px">
                 <b>Beneficiary:</b>Vangala Logistics<br>
                 <b>Bank:</b>HDFC Bank<br>
                 <b>Beneficiary Account No:</b>50200029925957<br>
                 <b>IFSC Code:</b>HDFC0004370
-            </p>
+                <aside style="text-align: right; font-size: 12px;padding-right: 30px">MANAGING PARTNETR</aside>
+            <!--<b style="font-size:12px">Bank Details:</b><br>-->
+            <!--<p style="font-size:7px">
+                <b>Beneficiary:</b>Vangala Logistics<br>
+                <b>Bank:</b>HDFC Bank<br>
+                <b>Beneficiary Account No:</b>50200029925957<br>
+                <b>IFSC Code:</b>HDFC0004370
+            </p>-->
         </td>
     </tr>
 </table>
