--- a/server/pdfTemplates/tripSettlementInvoice.html
+++ b/server/pdfTemplates/tripSettlementInvoice.html
@@ -8,69 +8,87 @@
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
     <style>
-        input {
-            border: none;
-            background: transparent;
-            border-bottom: 1px solid #fff;
-            outline: none;
+        table{
             font-size: 15px;
+            margin-left: 20px;
+            padding-left: 50px;
+            padding-top: 30px;
         }
-        p1{
-            font-size: 15px;
-            display: inline-block;
-            padding-top: 50px;
-        }
-        p2{
-            font-size: 15px;
-            display: inline-block;
-        }
-        p3{
-            font-size: 15px;
-            display: inline-block;
-        }
-        p6{
-            font-size: 15px;
-            display: inline-block;
-        }
-        p7{
-            font-size: 15px;
-        }
-    </style>
 
+    </style>
 </head>
+
 <body>
-<table cellspacing="20" style="margin-left:50px">
+<table cellspacing="15" style="margin-left:20px">
     <tr>
         <td><b>Veichle No:</b>{{truckNo}}</td>
         <td><b>Driver Name:</b>{{driverName.fullName}}</td>
         <td style="text-decoration-style:dashed;"><b>Date:</b>{{date}}</td>
     </tr>
 </table>
-<table>
+<table style="margin-left: 20px">
+    {{#each trip}}
     <tr>
-        <td>From:{{trip.startFrom}}</td>
-        <td>Date:{{trip.startFromDate}}</td>
-        <td>To:{{trip.startTo}}</td>
-        <td>Date:{{trip.startToDate}}</td>
-        <td>Start Km:{{trip.startKm}}</td>
+        <td>From:{{this.startFrom}}</td>
+        <td>Date:{{this.startFromDate}}</td>
+        <td>To:{{this.startTo}}</td>
+        <td>Date:{{this.startToDate}}</td>
+        <td>Start Km:{{this.startKm}}</td>
+    </tr>
+    <tr>
+        <td>From:{{this.endFrom}}</td>
+        <td>Date:{{this.endFromDate}}</td>
+        <td>To:{{this.endTo}}</td>
+        <td>Date:{{this.endToDate}}</td>
+        <td>End Km:{{this.endKm}}</td>
+
+    </tr>
+    {{/each}}
+    <tr>
+        <td>Total Kms:{{totalKm}}</td>
     </tr>
 </table>
-<!--<p3 style="padding-left: 20px">From:{{trip.endFrom}}</p3> <p3 style="padding-left: 150px">Date:{{trip.endFromDate}}</p3> <p3 style="padding-left: 240px">To:{{trip.endTo}}</p3><p3 style="padding-left: 150px">Date:{{trip.endToDate}}</p3>-->
-<p3 style="padding-left: 200px"> End Km :{{trip.endKm}}</p3> <br>
-<p4 style="padding-left: 20px;font-size: 20px">Total Kms:{{totalKm}}</p4><br>
-<p5 style="padding-left: 20px;font-size: 20px"> Cash Advance 1<sup>st</sup> Point..........:{{cashAdvanceFirstPoint}} Rs</p5><br>
-<p5 style="padding-left: 20px;font-size: 20px"> Cash Advance 2<sup>nd</sup> Point..........:{{cashAdvanceSecondPoint}}  Rs</p5><br>
-<p6 style="padding-left: 20px;"> Disel 1<sup>st</sup> Point:{{dieselFirstPointLiters}}Ltrs,{{dieselFirstPointAmount}}  Rs</p6>   <p6 style="padding-left: 200px;"> Pump:....{{pumpFirstPoint}}...........</p6><p6 style="padding-left: 50px;"> Bill No:.....{{billNoFirstPoint}}..........</p6><br>
-<p6 style="padding-left: 20px;"> Disel 2<sup>nd</sup> Point..{{dieselSecondPointLiters}}...Ltrs.......{{dieselsecondpointAmount}}.......:  Rs</p6>   <p6 style="padding-left: 200px;"> Pump:........{{pumpSecondPoint}}.......</p6><p6 style="padding-left: 50px;"> Bill No:......{{dieselsecondpointAmount}}.........</p6><br>
-<p7 style="padding-left: 20px;">Aditional Amount Given : {{additionalAmountGiven}}Rs</p7><br>
-<p7 style="padding-left: 20px;">Aditional Amount Given : {{additionalAmountGiven}}Rs</p7><br>
-<p7 style="padding-left: 20px;">Total Advance to Driver :{{totalAdvanceToDriver}} Rs </p7><br>
-<p7 style="padding-left: 20px;">Expense as per Km      :{{expensesAsPerKm}} </p7><br>
-<p7 style="padding-left: 20px;">Gross Recivable/payable-Driver :{{grossReceivablePaybleDriver}} </p7><br>
-<p7 style="padding-left: 20px;">Other Expenses :{{otherExpenses}} </p7><br>
-<p7 style="padding-left: 20px;">Other Expenses:{{otherExpenses}}</p7><br><br>
-<p7 style="padding-left: 20px;">Net Amount Recievable/Payable :{{netAmountReceivableOrPayble}} </p7><br><br>
-<p7 style="padding-left: 20px;">Trip Sheet No and Date :{{tripSheetNo}} </p7><br><br>
-
+<table>
+    <tr>
+        <td> Cash Advance 1<sup>st</sup> Point:{{cashAdvanceFirstPoint}} Rs</td>
+    </tr>
+    <tr>
+        <td> Cash Advance 2<sup>nd</sup> Point:{{cashAdvanceSecondPoint}}  Rs</td>
+    </tr>
+    <tr>
+        <td> Disel 1<sup>st</sup> Point:{{dieselFirstPointLiters}}Ltrs,{{dieselFirstPointAmount}}.Rs</td>   <td> Pump:{{pumpFirstPoint}}</td> <td> Bill No:{{billNoFirstPoint}}</td>
+    </tr>
+    <tr>
+        <td> Disel 2<sup>nd</sup> Point:{{dieselSecondPointLiters}}Ltrs,{{dieselsecondpointAmount}}.Rs</td> <td> Pump:{{pumpSecondPoint}}</td> <td> Bill No:{{dieselsecondpointAmount}}</td>
+    <tr>
+</table>
+<table>
+    <td>Aditional Amount Given : {{additionalAmountGiven}}Rs</td>
+    </tr>
+    </tr>
+    <td>Aditional Amount Given : {{additionalAmountGiven}}Rs</td>
+    </tr>
+    <tr>
+        <td>Total Advance to Driver :{{totalAdvanceToDriver}} Rs </td>
+    </tr>
+    <tr>
+        <td>Expense as per Km      :{{expensesAsPerKm}} </td>
+    </tr>
+    <tr>
+        <td>Gross Recivable/payable-Driver :{{grossReceivablePaybleDriver}} </td>
+    </tr>
+    <tr>
+        <td>Other Expenses :{{otherExpenses}} </td>
+    </tr>
+    <tr>
+        <td>Other Expenses:{{otherExpenses}}</td>
+    </tr>
+    <tr>
+        <td>Net Amount Recievable/Payable :{{netAmountReceivableOrPayble}} </td>
+    </tr>
+    <tr>
+        <td>Trip Sheet No and Date :{{tripSheetNo}} </td>
+    </tr>
+</table>
 </body>
 </html>
