--- a/server/pdfTemplates/vrl/invoice.html
+++ b/server/pdfTemplates/vrl/invoice.html
@@ -1,119 +1,144 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-    <title>Document</title>
-    <style>
-        table,
-        th,
-        td {
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
+    <title>Vaishnavi Road Lines</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        th {
-            padding: 5px;
-            text-align: center;
-        }
-
-    </style>
+    <!-- Bootstrap CSS -->
+    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"-->
+          <!--crossorigin="anonymous">-->
+    <link rel="stylesheet" href="css/vrl.css">
 </head>
 
 <body>
-
-<table style="width:100%">
-    <tr>
-        <td colspan="2" style="text-align: center"><span style="font-size: 15px"><b>TRANSPORT INVOICE</b></span></td>
-    </tr>
-    <tr>
-        <td width="50%">
-            <b>To<br>
-                {{partyName}}</b>
-            <br>{{partyAddress}}<br>
-            GST NO:{{gstNo}}<br>
-            PAN NO:<br>
-        </td>
-        <td width="50%">
-            Date:03/08/2018<br>
-            Invoice NO:VL/Transport/19-00834<br>
-            Job No:<br>
-            PAN No:{{accountDetails.panNo}}<br>
-            GST NO:{{accountDetails.GST}}
-        </td>
-    </tr>
-</table>
-<table style="width:100%">
-    <tr>
-        <th style="padding-right:180px">Shipper InVoice No:0062</th>
-        <th>Rate/Trip</th>
-        <th>No of trips</th>
-        <th>Total Amount</th>
-    </tr>
-    <tr>
-        <td>
-            <table width="50%" style="text-align: center;margin-left:15px">
-                <tr>
-                    <th>FROM</th>
-                    <th>LoadedOn</th>
-                    <th>TO</th>
-                    <th>UnLoaded On</th>
-                </tr>
-                {{#each invoiceDetails.trip}}
-                <tr>
-                    <td>{{this.from}}</td>
-                    <td>{{this.loadedOn}}</td>
-                    <td>{{this.to}}</td>
-                    <td>{{this.unloadedOn}}</td>
-                </tr>
-                {{/each}}
-                <p></p>
-            </table>
-            <p>CGST@{{accountDetails.cgst}}%</p>
-            <p>SGST@{{accountDetails.sgst}}%</p>
-        </td>
-        <td style="text-align:center;padding-bottom:200px">{{invoiceDetails.rate}}</td>
-        <td style="text-align:center;padding-bottom:200px">{{invoiceDetails.quantity}}</td>
-        <td style="text-align:center">{{invoiceDetails.totalAmount}}
-            <p style="padding-top:100px">{{cgstAmount}}</p>
-            <p>{{sgstAmount}}</p>
-        </td>
-    </tr>
-    <tr>
-        <td colspan="3">Total Amount(in rupees):</td>
-        <td style="text-align: center">{{totalAmount}}</td>
-    </tr>
-    <tr>
-        <td height = "60px" colspan="5"><b style="font-size:12px">Terms & Conditions:</b>
-            <p style="font-size:7px">Payment to be made to the cashier/Printed Oficial receipt must be obtained<br>
-                All cheques/Demand drafts in payments of bill must be crossed "A/c. payee only"<br>
-                And drawn in favour of 'VANGALA LOGISTICS'<br>
-                GST will be payable by the registered consignee/consignor<br>
-                who pays the bill under RCM<br>
-                All disputes are subject to Guntur Jurisdiction<br>
+<div class="container">
+    <div class="row bill-label">
+        <div class="col-2"></div>
+        <div class="col">
+            <h3 style="text-align: center;">
+                <b>
+                    <u>BILL</u>
+                </b>
+            </h3>
+        </div>
+        <div class="col-2">
+            <h6 style="text-align: right">Cell: 96666 95159</h6>
+            <h6 style="text-align: right">98480 20343</h6>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col"></div>
+        <div class="col-6" style="text-align: center;">
+            <h1>Vaishnavi Road Lines</h1>
+            <p>1st Floor, F-4, Srushty Residency, Nizampet, Hyderabad.</p>
+            <p>
+                <b>PAN NO. AALFV1077F</b>
             </p>
-            <aside style="text-align: right; font-size: 16px;padding-right: 10px">for VANGALA LOGISTICS</aside>
-            <b style="font-size:12px">Bank Details:</b><br>
-            <p style="font-size:7px">
-                <b>Beneficiary:</b>Vangala Logistics<br>
-                <b>Bank:</b>HDFC Bank<br>
-                <b>Beneficiary Account No:</b>50200029925957<br>
-                <b>IFSC Code:</b>HDFC0004370
-                <aside style="text-align: right; font-size: 12px;padding-right: 30px">MANAGING PARTNETR</aside>
-            <!--<b style="font-size:12px">Bank Details:</b><br>-->
-            <!--<p style="font-size:7px">
-                <b>Beneficiary:</b>Vangala Logistics<br>
-                <b>Bank:</b>HDFC Bank<br>
-                <b>Beneficiary Account No:</b>50200029925957<br>
-                <b>IFSC Code:</b>HDFC0004370
-            </p>-->
-        </td>
-    </tr>
-</table>
+            <p>
+                <b>GST No. 36AALFV1077F2ZZ</b>
+            </p>
+        </div>
+        <div class="col"></div>
+    </div>
+    <div class="row">
+        <div class="col-6">
+            <p>No.</p>
+        </div>
+        <div class="col-6">
+            <p style="text-align: right">Date____________</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <p>M/s._________________________________________________________________________________________________________________________</p>
+            <p>____________________________________________________________________________________________________________________________</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <table class="table-style">
+                <thead>
+                <tr style=" border: 1px solid black">
+                    <th scope="col" style="text-align: center; width: 10px">S.No.</th>
+                    <th scope="col" style="text-align: center; width: 500px">Vehicle Number</th>
+                    <th scope="col" style="text-align: center; width: 200px">Quantity</th>
+                    <th scope="col" style="text-align: center; width: 200px">Rate per Tonne</th>
+                    <th scope="col">
+                        <table style="width: 100%;">
+                            <tr>
+                                <th colspan="2" class="head-tabel-td-th">Amount</th>
+                            </tr>
+                            <th class="head-tabel-td-th">Rs.</th>
+                            <th style="text-align: center; width: 50px;" class="head-tabel-td-th">Ps.</th>
+                        </table>
+                    </th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row" class="total-th-td-bottom"></th>
+                    <td class="td-style total-th-td-bottom"></td>
+                    <td class="second-td"></td>
+                    <td></td>
+                    <td>
+                        <table style="width: 100%; height: 400px;">
+                            <tr>
+                                <td class="body-table1"></td>
+                                <td class="body-table2"></td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope=" row " class="total-th-td-top"></th>
+                    <th style="text-align: right;" class="total-th-td-top">TOTAL</th>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        <table style="width: 100%; height: 30px; ">
+                            <tr>
+                                <td class="bot-table1"></td>
+                                <td class="bot-table2"></td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="6 ">
+                        <p>Rupees</p>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-6 ">
+            <p>
+                E.& O.E.
+            </p>
+        </div>
+        <div class="col-6 ">
+            <h6 style="text-align: right ">For
+                <b>VAISHNAVI ROAD LINES</b>
+            </h6>
+        </div>
+    </div>
+</div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<!--
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo "
+        crossorigin="anonymous "></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js " integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49 "
+        crossorigin="anonymous "></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js " integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em "
+        crossorigin="anonymous "></script>
+-->
 </body>
+
 </html>
