--- a/server/pdfTemplates/vrl/lr.html
+++ b/server/pdfTemplates/vrl/lr.html
@@ -11,7 +11,6 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
     <!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script> -->
-    <script src="ajs3.js"></script>
 </head>
 <style>
     .logo span {
@@ -102,7 +101,7 @@
     }
 
     .t1 td {
-        font-size: 12px;
+        font-size: 10px;
         border: 1px solid black;
         padding-top: 2px;
         padding-bottom: 2px;
@@ -130,15 +129,16 @@
 
 
     </div>
-    <H3 style="font-size: 10px;padding-left: 150px;">TRANSPORTERS & CONTRACTORS</H3>
+    <H3 style="font-size: 10px;padding-left: 150px">TRANSPORTERS & CONTRACTORS</H3>
 </td>
-<td style="padding-left: 60px;text-align: right">Cell:9848020343,<br>9666695159</td>
+<td style="padding-left: 60px;text-align: right">Cell:9848020343,
+    <br>9666695159</td>
 </tr>
 </table>
 </div>
 <table>
     <tr>
-        <p2 style="font-size: 10px">SUB CONTRACTOR:</p2>
+        <p2 style="font-size: 12px">SUB CONTRACTOR:</p2>
         <p class="gap1"></p>
     </tr>
     <tr>
@@ -146,14 +146,14 @@
             <table>
                 <tr>
                     <td>
-                        <p3 style="font-size: 10px">Address of delivery:</p3>
+                        <p3 style="font-size: 10px">Address of delivery:<b>{{lrDetails.addressOfDeliveryOffice}}</b></p3>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <div class="box1">
-                            <p style="text-align: left">Consignment Note No:</p>
-                            <p style="text-align: left">Date:</p>
+                            <p style="text-align: left">Consignment Note No:{{lrDetails.lrNo}}</p>
+                            <p style="text-align: left">Date:{{lrDetails.dateStr}}</p>
                         </div>
                     </td>
                 </tr>
@@ -166,11 +166,12 @@
         </td>
         <td class="insurance">
             INSURANCE:
-            <br> The customer ha stated that
+            <br> The customer has stated that
             <br> They have insured the consignment
-            <br> They have not inured the consignment
+            <br> They have not insured the consignment
             <br> Ins.Co:
-            <br> Policy No:Date:
+            <br> Policy No:
+            <br>Date:
             <br> Amount:
         <td style="background-color: black; color: white; font-size: 15px; text-align: center; ">
             <p> AT</p>
@@ -198,22 +199,22 @@
         <td>
             <div class="line"></div>
             <div class="line"></div>
-            <div style="font-size: 10px">Consigner's Name & Address:</div>
+            <div style="font-size: 10px">Consignor's Name & Address:<u>{{lrDetails.consignorName}}</u></div>
         </td>
         <td>
             <div class="gap5"></div>
             <div class="gap6"></div>
-            <div style="font-size: 10px">From:</div>
+            <div style="font-size: 10px">From:<u>{{lrDetails.from}}</u></div>
         </td>
     </tr>
     <tr>
         <td>
-            <div style="font-size: 10px">Consigner's Name & Address:</div>
+            <div style="font-size: 10px">Consignee Name & Address:<u>{{lrDetails.consigneeBanksNameAndAddress}}</u></div>
             <div></div>
             <div></div>
         </td>
         <td>
-            <div style="font-size: 10px">To:</div>
+            <div style="font-size: 10px">To:<u>{{lrDetails.to}}</u></div>
         </td>
     </tr>
     <table class="t1">
@@ -225,28 +226,28 @@
             <th>Party's Invoice/Challan No.</th>
 
             <th colspan="2">
-                <table style="border-collapse: collapse;">
+                <table style="border-collapse: collapse">
                     <tr>
-                        <th style="text-align: center; border: none; border-bottom: 1PX solid black" colspan="2">Weight</th>
+                        <th style="text-align: center; border: none; border-bottom: 1px solid black;" colspan="2">Weight</th>
                     </tr>
                     <tr>
-                        <td style="border: none;">Actual</td>
-                        <td style="border-right: none">Changed</td>
+                        <td style="border: none;">Actual...</td>
+                        <td style="border: none; border-left: 1px solid black;">Changed</td>
                     </tr>
                 </table>
             </th>
 
 
 
-            <th>(blank)</th>
+            <th></th>
             <th colspan="2">
                 <table style="border-collapse: collapse;border-color: white">
                     <tr>
-                        <th style="text-align: center; border: none; border-bottom: 1px solid black;" colspan="2">Amount</th>
+                        <th style="text-align: center;border: none; border-bottom: 1px solid black;" colspan="2">Amount</th>
                     </tr>
                     <tr>
-                        <td>.Rs</td>
-                        <td>.Ps</td>
+                        <td style="border: none;">.Rs</td>
+                        <td style="border: none;border-left: 1px solid black;">.Ps</td>
                     </tr>
                 </table>
             </th>
@@ -260,8 +261,8 @@
             <td></td>
             <td></td>
             <td style="border: 1px solid black">Freight</td>
-            <td style="border: 1px solid black"></td>
-            <td style="border: 1px solid black"></td>
+            <td style="border: 1px solid black">{{lrDetails.freight}}</td>
+            <td style="border: 1px solid black">00</td>
         </tr>
         <tr>
             <td></td>
@@ -282,8 +283,8 @@
             <td></td>
             <td></td>
             <td style="border: 1px solid black">Risk Charges</td>
-            <td style="border: 1px solid black"></td>
-            <td style="border: 1px solid black"></td>
+            <td style="border: 1px solid black">{{lrDetails.rc}}</td>
+            <td style="border: 1px solid black">00</td>
 
         </tr>
         <tr>
@@ -330,7 +331,7 @@
             <td></td>
             <td></td>
             <td style="border: 1px solid black">Total</td>
-            <td style="border: 1px solid black"></td>
+            <td style="border: 1px solid black">{{accDetails.grandtotal}}</td>
             <td style="border: 1px solid black"></td>
 
         </tr>
