--- a/server/pdfTemplates/vrl/tripInvoice.html
+++ b/server/pdfTemplates/vrl/tripInvoice.html
@@ -104,7 +104,7 @@
             </tr>
             <tr style="text-align: left">
                 <td><b>Total Amount : </b></td>
-                <td>{{tripDetails.totalAmount-tripDetails.advanceAmount}}</td>
+                <td>{{totalAmountReceivable}}</td>
 
             </tr>
         </table>
