--- a/server/pdfTemplates/lr.html
+++ b/server/pdfTemplates/lr.html
@@ -208,7 +208,7 @@
             </div>
         </div>
 
-        <p><span style="padding-right:5px;margin: -15px 0px 0px 0px;padding: 0px"><b>Consignor's Name & Address</b></span><span style="border-bottom:1px solid #333; display:inline-block; width:80%;">{{lrDetails.consignorName}}</span></p>
+        <p><span style="padding-right:5px;margin: -15px 0px 0px 0px;padding: 0px"><b>Consignor's Name & Address</b></span><span style="border-bottom:1px solid #333; display:inline-block; width:80%;">{{lrDetails.partyName}}</span></p>
         <div class="row">
             <div class="col-xs-6">
                 <p><span style="padding-right:5px; margin: 0px"><b>Consignor's GSTIN No. :</b></span><span style="border-bottom:1px solid #333; display:inline-block; width:65%;">{{lrDetails.consignorGSTNo}}</span></p>
