--- a/server/pdfTemplates/vrl/lr.html
+++ b/server/pdfTemplates/vrl/lr.html
@@ -116,7 +116,7 @@
 
 <body>
 <div>
-    <p style="text-align: center;font-size: 12px">ALL DISPUTES SUBJECT TO HYDERABAD jURIDICTION ONLY</p>
+    <p style="text-align: center;font-size: 12px">ALL DISPUTES SUBJECT TO HYDERABAD JURIDICTION ONLY</p>
     <table>
         <tr>
             <td>
